Fixing text wrap

--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -3,6 +3,10 @@ page-home {
         background-color: #f4f4f4;
     }
 
+    .card-content {
+        white-space: normal !important;
+    }
+
     .item {
         background-color: #f4f4f4 !important;
         padding-left: 0;
